Fix spacing in Footer on 4k screens

--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,7 +1,7 @@
 .footer {
     display: flex;
-    justify-content: space-between;
     align-items: flex-start;
+    justify-content: center;
     gap: 5rem;
     background-color: var(--color-black);
     color: var(--color-white);
@@ -64,6 +64,8 @@
         flex-direction: column;
         padding: 1rem;
         align-items: center;
+        padding: 1rem;
+        gap: 1rem;
     }
 
     .usefulLinks, .contactLinks {
@@ -80,6 +82,4 @@
     .footer li {
         justify-content: center;
     }
-
-
 }
